--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-#env_logger = "0.11.8"
+env_logger = "0.11.8"
+pixels = "0.15.0"
 rand = "0.9.1"
-#wgpu = "25.0.0"
-#winit = "0.30.9"
+winit = "0.29"
